--- a/style.css
+++ b/style.css
@@ -1,4 +1,108 @@
 html {
+  background-color: #eadedb;
+  color: black;
+  font-family: 'Lexend Deca', sans-serif;
   height: 100%;
   width: 100%;
+}
+
+/* Styles the Add Grade button*/
+.add-grade-button {
+  color: black;
+  font-family: 'Lexend Deca', sans-serif;
+  background-color: #c9aaa2;
+  border: none;
+  padding: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 50px;
+}
+
+.add-grade-button:hover {
+  background-color: #b89086;
+}
+
+/* Styles the input number fields */
+.input-number-box {
+  padding: 4px;
+  padding-left: 9px;
+  padding-right: 9px;
+  max-width: 70px;
+  border-radius: 50px;
+  border: none;
+}
+
+/* Styles the Honors/AP checkbox */
+.input-honors {
+  background-color: green;
+}
+
+/* Hide arrows on all number input fields */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.add-grade-button2:hover {
+  background-color: #b89086;
+}
+
+.reset-button {
+  color: black;
+  font-family: 'Lexend Deca', sans-serif;
+  background-color: #e1e2e4;
+  border: none;
+  padding: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 50px;
+}
+
+.reset-button:hover {
+  background-color: #b4b7ba;
+}
+
+/* Style the tabs */
+.tab {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  overflow: hidden;
+  background-color: #c9aaa2;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  font-family: 'Lexend Deca', sans-serif;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #b89086;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #a77669;
+}
+
+/* Style the tab content */
+.tabcontent {
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #a77669;
+  display: none;
+  padding: 6px 12px;
 }
