--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ input[type=number] {
 }
 
 .tab {
-  min-width: 500px;
-  max-width: 500px;
+  min-width: 600px;
+  max-width: 600px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   overflow: hidden;
@@ -117,8 +117,8 @@ input[type=number] {
 .tabcontent {
   margin-left: auto;
   margin-right: auto;
-  min-width: 500px;
-  max-width: 500px;
+  min-width: 600px;
+  max-width: 600px;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #a77669;
@@ -127,9 +127,18 @@ input[type=number] {
 
 /* Style the snackbar */
 .show-snackbar {
-  display: block;
+  visibility: visible;
+  background-color: #c9aaa2;
+  transform: translateX(-50%);
+  text-align: center;
+  border-radius: 10px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
 }
 
 .hide-snackbar {
-  display: none;
+  visibility: hidden;
 }
